tests/ui/lexer/unterminated-block-comment-backtick.rs
/** This doc comment has `/*` inside backticks */
//~^ ERROR E0758

fn main() {}
